[package]
name = "anemo"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Francois Garillot <francois@mystenlabs.com>"]
description = "a WIP networking crate"
repository = "https://github.com/mystenlabs/mysten-infra"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
quinn = { version = "0.8.0", default-features = false, features = ["ring", "tls-rustls"] }
quinn-proto = "0.8.0"
rcgen = "0.8.4"
serde = { version = "1.0.133", features = ["derive"]}
thiserror = "1.0.30"
rustls = { version = "0.20.2", features = ["dangerous_configuration"] }
rccheck = { path = "../rccheck" }
anyhow = "1.0.53"
serde_with = "1.12.0"
bincode = "1.3.3"
futures = "0.3.21"
bytes = { version = "1.0.1", features = ["serde"] }
tokio = { version = "1.16.1", features = ["sync", "rt", "macros"] }
tracing = { version = "0.1.29", features = ["log"] }

[dev-dependencies]
color-eyre = "0.6.0"
ed25519 = "1.3.0"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
tracing-test = "0.2.1"
